--- a/home/Liqyid/common/optional/desktop/ags/ags_notebook/style/material.scss
+++ b/home/Liqyid/common/optional/desktop/ags/ags_notebook/style/material.scss
@@ -1,14 +1,14 @@
 $darkmode: True;
 $transparent: False;
-$primary_paletteKeyColor: #757685;
-$secondary_paletteKeyColor: #777680;
-$tertiary_paletteKeyColor: #74768C;
+$primary_paletteKeyColor: #777585;
+$secondary_paletteKeyColor: #787680;
+$tertiary_paletteKeyColor: #77758B;
 $neutral_paletteKeyColor: #787678;
 $neutral_variant_paletteKeyColor: #787678;
-$background: #131315;
+$background: #141315;
 $onBackground: #E5E1E3;
-$surface: #131315;
-$surfaceDim: #131315;
+$surface: #141315;
+$surfaceDim: #141315;
 $surfaceBright: #3A393A;
 $surfaceContainerLowest: #0E0E0F;
 $surfaceContainerLow: #1C1B1D;
@@ -16,61 +16,61 @@ $surfaceContainer: #201F21;
 $surfaceContainerHigh: #2A2A2B;
 $surfaceContainerHighest: #353436;
 $onSurface: #E5E1E3;
-$surfaceVariant: #474648;
-$onSurfaceVariant: #C9C6C7;
+$surfaceVariant: #484648;
+$onSurfaceVariant: #C9C5C7;
 $inverseSurface: #E5E1E3;
 $inverseOnSurface: #313032;
 $outline: #929092;
-$outlineVariant: #474648;
+$outlineVariant: #484648;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #C5C5D6;
-$primary: #C5C5D6;
-$onPrimary: #2E2F3D;
-$primaryContainer: #454654;
-$onPrimaryContainer: #E2E1F3;
-$inversePrimary: #5C5D6C;
-$secondary: #C7C5D0;
-$onSecondary: #2F3038;
-$secondaryContainer: #46464F;
-$onSecondaryContainer: #E3E1EC;
-$tertiary: #C4C5DD;
-$onTertiary: #2D2F42;
-$tertiaryContainer: #8E8FA6;
+$surfaceTint: #C7C4D6;
+$primary: #C7C4D6;
+$onPrimary: #302F3D;
+$primaryContainer: #464554;
+$onPrimaryContainer: #E4E0F2;
+$inversePrimary: #5E5D6C;
+$secondary: #C8C5D0;
+$onSecondary: #302F38;
+$secondaryContainer: #47464F;
+$onSecondaryContainer: #E4E1EC;
+$tertiary: #C7C4DD;
+$onTertiary: #2F2E42;
+$tertiaryContainer: #908EA5;
 $onTertiaryContainer: #000000;
 $error: #FFB4AB;
 $onError: #690005;
 $errorContainer: #93000A;
 $onErrorContainer: #FFDAD6;
-$primaryFixed: #E2E1F3;
-$primaryFixedDim: #C5C5D6;
-$onPrimaryFixed: #191B27;
-$onPrimaryFixedVariant: #454654;
-$secondaryFixed: #E3E1EC;
-$secondaryFixedDim: #C7C5D0;
-$onSecondaryFixed: #1A1B23;
-$onSecondaryFixedVariant: #46464F;
-$tertiaryFixed: #E0E1F9;
-$tertiaryFixedDim: #C4C5DD;
-$onTertiaryFixed: #181A2C;
-$onTertiaryFixedVariant: #434559;
+$primaryFixed: #E4E0F2;
+$primaryFixedDim: #C7C4D6;
+$onPrimaryFixed: #1B1A27;
+$onPrimaryFixedVariant: #464554;
+$secondaryFixed: #E4E1EC;
+$secondaryFixedDim: #C8C5D0;
+$onSecondaryFixed: #1B1B23;
+$onSecondaryFixedVariant: #47464F;
+$tertiaryFixed: #E3E0F9;
+$tertiaryFixedDim: #C7C4DD;
+$onTertiaryFixed: #1A1A2C;
+$onTertiaryFixedVariant: #464559;
 $success: #B5CCBA;
 $onSuccess: #213528;
 $successContainer: #374B3E;
 $onSuccessContainer: #D1E9D6;
 $term0: #1B1A1C;
-$term1: #A078FF;
+$term1: #B071FF;
 $term2: #64DCF0;
 $term3: #FFDCF3;
-$term4: #94ABD7;
-$term5: #ADA1ED;
+$term4: #9AA9D8;
+$term5: #B59EEA;
 $term6: #9DCEFF;
 $term7: #E8D3DE;
 $term8: #C3B5C0;
-$term9: #CBB5FF;
+$term9: #D5B1FF;
 $term10: #F7FDFF;
 $term11: #FFFFFF;
-$term12: #CDDDF8;
-$term13: #DED4FF;
+$term12: #D1DCF9;
+$term13: #E3D2FF;
 $term14: #F8FAFF;
 $term15: #E5E0E9;
