dry: symlink redundant ags config files

--- a/home/Liqyid/common/optional/desktop/ags/ags_notebook/style/prelude.scss
+++ b/home/Liqyid/common/optional/desktop/ags/ags_notebook/style/prelude.scss
@@ -1,5 +1,1 @@
-/* get rid of GTK theme's styles and set defaults */
-* {
-  all: unset;
-  font-family: FiraCode Nerd Font;
-}
+../../ags_desktop/style/prelude.scss
