--- a/home/Liqyid/common/optional/desktop/ags/ags_notebook/style.scss
+++ b/home/Liqyid/common/optional/desktop/ags/ags_notebook/style.scss
@@ -1,13 +1,1 @@
-/* style aggregator */
-
-/* setup */
-@import "style/prelude";
-@import "style/colors";
-@import "style/general";
-
-/* modules & windows */
-@import "style/bar";
-@import "style/music";
-@import "style/osd";
-@import "style/system-menu";
-@import "style/notifications";
+../ags_desktop/style.scss
