--- a/home/Liqyid/common/optional/desktop/ags/ags_desktop/style/bar.scss
+++ b/home/Liqyid/common/optional/desktop/ags/ags_desktop/style/bar.scss
@@ -1,7 +1,7 @@
 $font: 1.1rem;
 
 .bar {
-  background: $bar-bg;
+  background: $barBg;
   min-height: 32px;
   border-radius: calc($round2 * 2);
   margin: 0.45rem 0.45rem 0px 0.45rem;
@@ -21,43 +21,41 @@ $font: 1.1rem;
     border-radius: 2rem;
     margin: 0.6rem 0.35rem;
     min-width: 1.3rem;
-    transition: 100ms linear;
-    box-shadow: inset -2px -2px 2px transparentize($bg , 0.2) 
+    transition: 200ms cubic-bezier(0.3, 0.3, 0.1, 1);
+    box-shadow: inset -1px -2px 3px transparentize($bg , 0.1) 
   }
 
-  
   .focused {
     min-width: 2.5rem;
   }
 
   .monitor0 {
-    background: $primary-mon;
-    box-shadow: inset -2px -2px 2px adjust_color($primary-mon, $lightness: -10%);
+    background: $primaryMon;
+    box-shadow: inset -2px -2px 2px adjust_color($primaryMon, $lightness: -10%);
   }
   .monitor0:hover{
-    background: adjust_color($primary-mon, $lightness: +8%);
+    background: adjust_color($primaryMon, $lightness: +10%);
   }
-
   .monitor1 {
-    background: $secondary-mon;
-    box-shadow: inset -2px -2px 2px adjust_color($secondary-mon, $lightness: -10%);
+    background: $secondaryMon;
+    box-shadow: inset -2px -2px 2px adjust_color($secondaryMon, $lightness: -10%);
   }
   .monitor1:hover{
-    background: adjust_color($secondary-mon, $lightness: +8%);
+    background: adjust_color($secondaryMon, $lightness: +10%);
   }
   .monitor2 {
-    background: $third-mon;
-    box-shadow: inset -2px -2px 2px adjust_color($third-mon, $lightness: -10%);
+    background: $thirdMon;
+    box-shadow: inset -2px -2px 2px adjust_color($thirdMon, $lightness: -10%);
   }
   .monitor2:hover{
-    background: adjust_color($third-mon, $lightness: +8%);
+    background: adjust_color($thirdMon, $lightness: +10%);
   }
   .monitor3 {
-    background: $fourth-mon;
-    box-shadow: inset -2px -2px 2px adjust_color($fourth-mon, $lightness: -10%);
+    background: $fourthMon;
+    box-shadow: inset -2px -2px 2px adjust_color($fourthMon, $lightness: -10%);
   }
   .monitor3:hover{
-    background: adjust_color($fourth-mon, $lightness: +8%);
+    background: adjust_color($fourthMon, $lightness: +8%);
   }
 }
 
@@ -101,7 +99,7 @@ $font: 1.1rem;
 }
 
 menu {
-  background: $tooltip-bg;
+  background: $tooltipBg;
   border-radius: $round;
 
   separator {
