--- a/home/Liqyid/common/optional/desktop/ags/ags_desktop/style/general.scss
+++ b/home/Liqyid/common/optional/desktop/ags/ags_desktop/style/general.scss
@@ -43,7 +43,7 @@ $scale: 0.5rem;
 }
 
 tooltip {
-  background: $tooltip-bg;
+  background: $tooltipBg;
   box-shadow:
     inset 0 0 0 1px rgba(255, 255, 255, 0.1),
     0 0 rgba(0, 0, 0, 0.4);
@@ -71,23 +71,23 @@ progressbar {
 
 @mixin button-active {
   @include animate;
-  background: $button-enabled;
+  background: $buttonEnabled;
   border-radius: 5rem;
   padding: 0.4rem;
 
   &:hover {
-    background: $button-enabled-hover;
+    background: $buttonEnabledHover;
   }
 }
 
 @mixin button {
   @include animate;
-  background: $button-disabled;
+  background: $buttonDisabled;
   border-radius: 5rem;
   padding: 0.4rem;
 
   &:hover {
-    background: $button-disabled-hover;
+    background: $buttonDisabledHover;
   }
 }
 
