--- a/home/Liqyid/common/optional/desktop/ags/ags_desktop/style/colors-dark.scss
+++ b/home/Liqyid/common/optional/desktop/ags/ags_desktop/style/colors-dark.scss
@@ -1,21 +1,128 @@
-@import 'material';
+/*
+* Css Colors
+* Generated with Matugen
+*/
+
+$background: rgba(14, 21, 12, 1.0);
+
+$error: rgba(255, 180, 171, 1.0);
+
+$error_container: rgba(147, 0, 10, 1.0);
+
+$inverse_on_surface: rgba(43, 51, 39, 1.0);
+
+$inverse_primary: rgba(12, 110, 0, 1.0);
+
+$inverse_surface: rgba(221, 229, 213, 1.0);
+
+$on_background: rgba(221, 229, 213, 1.0);
+
+$on_error: rgba(105, 0, 5, 1.0);
+
+$on_error_container: rgba(255, 218, 214, 1.0);
+
+$on_primary: rgba(3, 57, 0, 1.0);
+
+$on_primary_container: rgba(120, 255, 93, 1.0);
+
+$on_primary_fixed: rgba(1, 34, 0, 1.0);
+
+$on_primary_fixed_variant: rgba(7, 83, 0, 1.0);
+
+$on_secondary: rgba(22, 55, 34, 1.0);
+
+$on_secondary_container: rgba(198, 236, 205, 1.0);
+
+$on_secondary_fixed: rgba(0, 33, 14, 1.0);
+
+$on_secondary_fixed_variant: rgba(45, 78, 55, 1.0);
+
+$on_surface: rgba(221, 229, 213, 1.0);
+
+$on_surface_variant: rgba(193, 201, 185, 1.0);
+
+$on_tertiary: rgba(0, 56, 41, 1.0);
+
+$on_tertiary_container: rgba(174, 240, 214, 1.0);
+
+$on_tertiary_fixed: rgba(0, 33, 23, 1.0);
+
+$on_tertiary_fixed_variant: rgba(5, 81, 61, 1.0);
+
+$outline: rgba(139, 147, 133, 1.0);
+
+$outline_variant: rgba(65, 73, 61, 1.0);
+
+$primary: rgba(33, 230, 0, 1.0);
+
+$primary_container: rgba(7, 83, 0, 1.0);
+
+$primary_fixed: rgba(120, 255, 93, 1.0);
+
+$primary_fixed_dim: rgba(33, 230, 0, 1.0);
+
+$scrim: rgba(0, 0, 0, 1.0);
+
+$secondary: rgba(170, 208, 178, 1.0);
+
+$secondary_container: rgba(45, 78, 55, 1.0);
+
+$secondary_fixed: rgba(198, 236, 205, 1.0);
+
+$secondary_fixed_dim: rgba(170, 208, 178, 1.0);
+
+$shadow: rgba(0, 0, 0, 1.0);
+
+$source_color: rgba(16, 111, 3, 1.0);
+
+$surface: rgba(14, 21, 12, 1.0);
+
+$surface_bright: rgba(52, 59, 48, 1.0);
+
+$surface_container: rgba(26, 34, 23, 1.0);
+
+$surface_container_high: rgba(37, 44, 33, 1.0);
+
+$surface_container_highest: rgba(47, 55, 44, 1.0);
+
+$surface_container_low: rgba(22, 29, 19, 1.0);
+
+$surface_container_lowest: rgba(9, 16, 7, 1.0);
+
+$surface_dim: rgba(14, 21, 12, 1.0);
+
+$surface_tint: rgba(33, 230, 0, 1.0);
+
+$surface_variant: rgba(65, 73, 61, 1.0);
+
+$tertiary: rgba(147, 212, 186, 1.0);
+
+$tertiary_container: rgba(5, 81, 61, 1.0);
+
+$tertiary_fixed: rgba(174, 240, 214, 1.0);
+
+$tertiary_fixed_dim: rgba(147, 212, 186, 1.0);
+
+
 $red:                  #d17678;
 $accent_green:         #afbea2;
 
-$primaryMon:           $primaryContainer;
-$secondaryMon:         $tertiaryContainer;
+$primaryMon:           $primary_container;
+$primaryMonHover:      mix($primary_container, $on_primary_container, 30%);
+$primaryMonActive:     mix($primary_container, $on_primary_container, 100%);
+$secondaryMon:         $tertiary_container;
 $thirdMon:             $tertiary;
-$fourthMon:            $success;
+$fourthMon:            $secondary;
 
 $tooltipBg:            $background;
-$fg:                   $onBackground;
+$fg:                   $on_background;
 $bg:                   transparentize($background, .5);
 $barBg:                transparentize($background, .5);
 
-$surface:              transparentize($surfaceBright, .6);
-$overlay:              transparentize($onSurface, .25);
+$surface:              transparentize($surface_bright, .6);
+$overlay:              transparentize($on_surface, .25);
 
-$accent:               $tertiaryContainer;
+$accent:               $tertiary_container;
 
 /* buttons */
 $buttonEnabled:        $accent;
