--- a/home/Liqyid/common/optional/desktop/matugen/templates/ags.scss
+++ b/home/Liqyid/common/optional/desktop/matugen/templates/ags.scss
@@ -33,13 +33,7 @@ $buttonEnabledHover:   adjust_color($buttonEnabled, $lightness: -15%);
 $buttonDisabled:       $surface;
 $buttonDisabledHover:  adjust_color($buttonDisabled, $alpha: +0.8);
 
-* {
-  text-shadow: 0 2px 3px transparentize($background, .8);
-}
-
-@mixin border {
-  // border: 1px solid transparentize($background, .9);
-  box-shadow:
-    // inset 0 0 0 1px transparentize($background, .9),
-    0 3px 5px 1px transparentize($background, .9);
-}
+/* hw circular proc */
+$ramProc:              $on_primary_fixed_variant;
+$cpuProc:              $on_tertiary_fixed_variant;
+$procBg:               $surface_dim;
